// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jsonBookmarkParser > flatten snapshots 1`] = `
"[
  {
    "type": "folder",
    "id": "2",
    "name": "menu",
    "children": [],
    "addDate": "1781208849342000",
    "lastModified": "1781215255459000"
  },
  {
    "type": "folder",
    "id": "3",
    "name": "toolbar",
    "children": [],
    "addDate": "1781208849342000",
    "lastModified": "1781208970480000"
  },
  {
    "type": "bookmark",
    "id": "12",
    "name": "Google",
    "url": "https://www.google.com/?zx=1781208870868",
    "addDate": "1781208873962000",
    "lastModified": "1781208873962000",
    "prevNode": {
      "type": "folder",
      "id": "3",
      "name": "toolbar",
      "children": [],
      "addDate": "1781208849342000",
      "lastModified": "1781208970480000"
    }
  },
  {
    "type": "folder",
    "id": "13",
    "name": "dev",
    "children": [],
    "addDate": "1781208879204000",
    "lastModified": "1781208970480000",
    "prevNode": "toolbar"
  },
  {
    "type": "bookmark",
    "id": "14",
    "name": "GitHub · Change is constant. GitHub keeps you ahead. · GitHub",
    "url": "https://github.com/",
    "addDate": "1781208891909000",
    "lastModified": "1781208891909000",
    "iconUri": "https://github.githubassets.com/favicons/favicon.svg",
    "prevNode": {
      "type": "folder",
      "id": "13",
      "name": "dev",
      "children": [],
      "addDate": "1781208879204000",
      "lastModified": "1781208970480000",
      "prevNode": "toolbar"
    }
  },
  {
    "type": "folder",
    "id": "15",
    "name": "product",
    "children": [],
    "addDate": "1781208904770000",
    "lastModified": "1781208970480000",
    "prevNode": "dev"
  },
  {
    "type": "bookmark",
    "id": "16",
    "name": "Product Hunt – The best new products in tech.",
    "url": "https://www.producthunt.com/",
    "addDate": "1781208934370000",
    "lastModified": "1781208934370000",
    "iconUri": "https://ph-static.imgix.net/ph-favicon-brand-500.svg",
    "prevNode": {
      "type": "folder",
      "id": "15",
      "name": "product",
      "children": [],
      "addDate": "1781208904770000",
      "lastModified": "1781208970480000",
      "prevNode": "dev"
    }
  },
  {
    "type": "folder",
    "id": "17",
    "name": "empty-folder",
    "children": [],
    "addDate": "1781208966481000",
    "lastModified": "1781208970480000",
    "prevNode": "product"
  },
  {
    "type": "folder",
    "id": "5",
    "name": "unfiled",
    "children": [],
    "addDate": "1781208849342000",
    "lastModified": "1781208849503000"
  },
  {
    "type": "folder",
    "id": "6",
    "name": "mobile",
    "children": [],
    "addDate": "1781208849362000",
    "lastModified": "1781208849503000"
  }
]"
`;

exports[`jsonBookmarkParser > snapshots 1`] = `
[
  {
    "addDate": "1781208849342000",
    "children": [],
    "id": "2",
    "lastModified": "1781215255459000",
    "name": "menu",
    "type": "folder",
  },
  {
    "addDate": "1781208849342000",
    "children": [
      {
        "addDate": "1781208873962000",
        "id": "12",
        "lastModified": "1781208873962000",
        "name": "Google",
        "prevNode": [Circular],
        "type": "bookmark",
        "url": "https://www.google.com/?zx=1781208870868",
      },
      {
        "addDate": "1781208879204000",
        "children": [
          {
            "addDate": "1781208891909000",
            "iconUri": "https://github.githubassets.com/favicons/favicon.svg",
            "id": "14",
            "lastModified": "1781208891909000",
            "name": "GitHub · Change is constant. GitHub keeps you ahead. · GitHub",
            "prevNode": [Circular],
            "type": "bookmark",
            "url": "https://github.com/",
          },
          {
            "addDate": "1781208904770000",
            "children": [
              {
                "addDate": "1781208934370000",
                "iconUri": "https://ph-static.imgix.net/ph-favicon-brand-500.svg",
                "id": "16",
                "lastModified": "1781208934370000",
                "name": "Product Hunt – The best new products in tech.",
                "prevNode": [Circular],
                "type": "bookmark",
                "url": "https://www.producthunt.com/",
              },
              {
                "addDate": "1781208966481000",
                "children": [],
                "id": "17",
                "lastModified": "1781208970480000",
                "name": "empty-folder",
                "prevNode": [Circular],
                "type": "folder",
              },
            ],
            "id": "15",
            "lastModified": "1781208970480000",
            "name": "product",
            "prevNode": [Circular],
            "type": "folder",
          },
        ],
        "id": "13",
        "lastModified": "1781208970480000",
        "name": "dev",
        "prevNode": [Circular],
        "type": "folder",
      },
    ],
    "id": "3",
    "lastModified": "1781208970480000",
    "name": "toolbar",
    "type": "folder",
  },
  {
    "addDate": "1781208849342000",
    "children": [],
    "id": "5",
    "lastModified": "1781208849503000",
    "name": "unfiled",
    "type": "folder",
  },
  {
    "addDate": "1781208849362000",
    "children": [],
    "id": "6",
    "lastModified": "1781208849503000",
    "name": "mobile",
    "type": "folder",
  },
]
`;
